[gd_scene load_steps=15 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Mechanisms/lever/lever.gd" type="Script" id=2]
[ext_resource path="res://Config/SceneEntrace.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Mechanisms/door/door1.png" type="Texture" id=4]
[ext_resource path="res://Objects/Mechanisms/door/door3.png" type="Texture" id=5]
[ext_resource path="res://Objects/Mechanisms/door/door2.png" type="Texture" id=6]
[ext_resource path="res://Objects/Mechanisms/door/door4.png" type="Texture" id=7]
[ext_resource path="res://Objects/Mechanisms/lever/off.png" type="Texture" id=8]
[ext_resource path="res://Objects/Mechanisms/lever/on.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "door",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40.8929, 75.7143 )

[sub_resource type="CircleShape2D" id=3]
radius = 58.728

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.07146, 75 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 15.0
} ]

[node name="Door" type="Node2D"]
position = Vector2( 6, -18 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 84, 103 )

[node name="Entrace" parent="." instance=ExtResource( 3 )]
position = Vector2( 3, 104 )
scene_to_load = "res://Scene/Center.tscn"

[node name="lever door" type="KinematicBody2D" parent="."]
position = Vector2( 273, 97 )
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 2 )

[node name="DoorAnimated" type="AnimatedSprite" parent="lever door"]
position = Vector2( 2.85721, -12.8571 )
scale = Vector2( 1, 1 )
frames = SubResource( 1 )
animation = "door"

[node name="CloseDoorCollision" type="CollisionShape2D" parent="lever door"]
position = Vector2( -2.85718, 12.8572 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="lever door"]
position = Vector2( 6.64291, -17.25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever door/Area2D"]
position = Vector2( -246.643, 142.964 )
shape = SubResource( 3 )

[node name="CollisionDoor" type="CollisionShape2D" parent="lever door"]
position = Vector2( 42.8571, 14.2857 )
scale = Vector2( 1, 1 )
shape = SubResource( 4 )

[node name="LeverAnimated" type="AnimatedSprite" parent="lever door"]
position = Vector2( -241.429, 112.857 )
rotation = 1.5708
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 5 )

[node name="Entrace2" parent="lever door" instance=ExtResource( 3 )]
position = Vector2( 12.8571, 12.8572 )
rotation = -3.55271e-15
scale = Vector2( 1.429, 0.7 )

[connection signal="animation_finished" from="lever door/DoorAnimated" to="lever door" method="_on_DoorAnimated_animation_finished"]
[connection signal="body_entered" from="lever door/Area2D" to="lever door" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="lever door/Area2D" to="lever door" method="_on_Area2D_body_exited"]
